plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5' // 최신 안정 버전 확인 필요
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'wap.web2'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // AWS (S3 등)
    // implementation 'org.springframework.cloud:spring-cloud-starter-aws'
    implementation(platform("software.amazon.awssdk:bom:2.25.17"))
    implementation("software.amazon.awssdk:s3")
    implementation("software.amazon.awssdk:auth")

    // Oracle
    implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage:3.67.1'
    implementation 'com.oracle.oci.sdk:oci-java-sdk-common:3.67.1'
    implementation 'com.oracle.oci.sdk:oci-java-sdk-common-httpclient-jersey3:3.67.1'

    // Azure Storage
    implementation 'com.azure:azure-storage-blob:12.32.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity6"

    // csv
    implementation 'org.apache.commons:commons-csv:1.11.0'

    // Monitor
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'
}

test {
    useJUnitPlatform()
}
